[metadata]
name = ansyswrapper
version = 0.1.0
summary = 
description-file = README.txt
keywords = openmdao
home-page = mechsol.com
download-url = github.com
author = Mechanical Solutions Inc.
author-email = 
maintainer = Mechanical Solutions Inc.
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = Mechanical Solutions Inc.
static_path = [ '_static' ]

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

